src/test/ui/consts/uninhabited-const-issue-61744.stderr
error[E0080]: evaluation of `<i32 as Const>::CONSTANT` failed
  --> $DIR/uninhabited-const-issue-61744.rs:4:5
   |
LL |     hint_unreachable()
   |     ^^^^^^^^^^^^^^^^^^
   |     |
   |     reached the configured maximum number of stack frames
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<!>`
   |     inside `fake_type::<i32>`
...
LL |     fake_type()
   |     -----------
   |     |
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
   |     inside `hint_unreachable`
...
LL |     const CONSTANT: i32 = unsafe { fake_type() };
   |                                    ----------- inside `<i32 as Const>::CONSTANT`

note: erroneous constant used
  --> $DIR/uninhabited-const-issue-61744.rs:18:10
   |
LL |     dbg!(i32::CONSTANT);
   |          ^^^^^^^^^^^^^

note: erroneous constant used
  --> $DIR/uninhabited-const-issue-61744.rs:18:10
   |
LL |     dbg!(i32::CONSTANT);
   |          ^^^^^^^^^^^^^

note: erroneous constant used
  --> $DIR/uninhabited-const-issue-61744.rs:18:10
   |
LL |     dbg!(i32::CONSTANT);
   |          ^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
